# markdown_server

./: .pylintrc  README.md  markdown_server.py  poetry.toml  pyproject.toml  setup.cfg
test_dir/: embedded_python.md  table1.md  test1.md
