[tool.poetry]
name = "markdown_server"
version = "0.1.0"
description = "Python HTTP file server but with Markdown rendering"
authors = [ "Marcus Epperson <marcus.r.epperson@gmail.com>" ]
readme = "README.md"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
click = "^8.1.3"
xdg = "^5.1.1"
# ipython = "^8.8.0"

[tool.poetry.group.test.dependencies]
ipython = "^8.9.0"
